# joltamp-networking

./: Cargo.toml  README.md  docker-compose.yml
.github/workflows/: rust.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/db/: error.rs  init.rs
backend/src/guards/: mod.rs
backend/src/routes/: auth_account.rs  create_account.rs  create_app.rs  mod.rs  verify_account.rs
backend/src/routes/panel/: change_app_perms.rs  change_user_info.rs  get_apps.rs  get_users.rs  (+1 more)
backend/src/services/: mod.rs
backend/src/types/: account.rs  app.rs  mod.rs
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts
frontend/src/apis/: auth_api.ts
frontend/src/plugins/: plausible.ts
frontend/src/router/: index.ts
frontend/src/views/: HomeView.vue  LoginView.vue  NotFoundView.vue  RegisterView.vue
src/: main.rs  tests.rs
src/db/: error.rs  init.rs
src/guards/: networking_admin_guard.rs
src/routes/: auth_account.rs  authorize_app.rs  create_account.rs  create_app.rs  get_app.rs  login_account.rs  mod.rs  site_handler.rs  verify_account.rs
src/routes/panel/: change_app_id.rs  change_app_perms.rs  change_app_url.rs  change_user_jwt.rs  change_user_password.rs  get_apps.rs  get_users.rs  mod.rs  rm_app.rs  rm_user.rs
src/services/: check_app_existence.rs  check_user_existence.rs  is_admin_account.rs  mod.rs
src/types/: account.rs  app.rs  auth.rs  login.rs  mod.rs
www/auth-frontend/: README.md  package-lock.json  package.json  vite.config.ts
www/auth-frontend/src/: App.vue  style.css
(+16 files in other folders)
