[package]
name = "networking"
version = "0.1.0"
edition = "2024"

[dependencies]
faker_rand = "0.1.1"
rand = "0.8.5"
rocket = {version = "0.5.1", features = ["json"]}
serde = {version = "1.0.209", features = ["derive"]}
surrealdb = "2.0.4"
thiserror = "1.0.64"
uuid = { version = "1.16.0", features = ["v7"] }
