[package]
name = "networking"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = {version = "0.5.1", features = ["json"]}
serde = {version = "1.0.209", features = ["derive"]}
surrealdb = "2.0.4"
thiserror = "1.0.64"
uuid = { version = "1.16.0", features = ["v7"] }
serde_json = "1.0.140"
rand_core = "0.6.4"
argon2 = "0.5.3"
